# petram-lang

./: .gitignore  Cargo.toml  Lexer.fs  Parser.fs  Petram Language Specification Summary.md  Program.fs  README.md  Types.fs  dune-project  go.mod  petram-lang.fsproj  petram-lang.sln  petram.opam
docs/: Petram Language Specification Summary.md  Syntax.md
examples/: bracket_nesting.petra  hello_world.petra  hello_world.petram  main.petra  method_chaining_demo.petra  modules.petra  piping_operator_demo.petra  structs.petra  tic_tac_toe.petra  traits.petra
lib/: dune
lib/lexer/: lexer.rs
src/: Codegen.fs  Keywords.fs  Lexer.fs  Parser.fs  Tokens.fs  Types.fs  main.rs
src/lexer/: lexer.rs  mod.rs
test/: dune
